fix skrypty